/*********************************************************************
*  @author Rafal Slota
*  @copyright (C): 2014 ACK CYFRONET AGH
*  This software is released under the MIT license
*  cited in 'LICENSE.txt'.
*********************************************************************/

#ifndef COMMUNICATOR_H
#define COMMUNICATOR_H

namespace veil
{
namespace cluster
{

class ProviderEndpointPool
{
public:


protected:

};

} // namespace cluster
} // namespace veil

#endif // COMMUNICATOR_H